Se realizan modificaciones en vista de crear y listar disfraces

--- a/disfraces/disfraces.html
+++ b/disfraces/disfraces.html
@@ -61,11 +61,12 @@
       <!-- Seccion para nuevos registros-->
       <div id="nuevo">
         <h3>Registrar ...</h3>
-        <input type="number" id="id" placeholder="id">
-        <input type="text" id="name" placeholder="name">
-        <input type="text" id="brand" placeholder="brand">
-        <input type="number" id="model" placeholder="model">
-        <input type="number" id="category" placeholder="category_id">
+        <!-- <input type="number" id="id" placeholder="Id"> -->
+        <input type="text" id="name" placeholder="Nombre">
+        <input type="text" id="brand" placeholder="Marca">
+        <input type="text" id="description" placeholder="Descripcion">
+        <input type="number" id="year" placeholder="Año">
+        <input type="number" id="category" placeholder="Categoria">
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
