--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -62,10 +62,11 @@
       <!-- Seccion para nuevos registros-->
       <div id="nuevo">
         <h3>Registrar ...</h3>
-        <input type="number" id="id" placeholder="id">
-        <input type="text" id="name" placeholder="Name">
-        <input type="email" id="email" placeholder="Email">
-        <input type="number" id="age" placeholder="Age">
+        <!-- <input type="number" id="id" placeholder="id"> -->
+        <input type="text" id="name" placeholder="Nombre">
+        <input type="email" id="email" placeholder="Correo">
+        <input type="password" id="password" placeholder="Contraseña">
+        <input type="number" id="age" placeholder="Edad">
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
