--- a/disfraces/disfraces.html
+++ b/disfraces/disfraces.html
@@ -41,6 +41,13 @@
         <li>
           <a href="../mensajes/mensajes.html"><span class="fa fa-sticky-note mr-3"></span> Lista de mensajes</a>
         </li>
+
+        <li>
+          <a href="../categoria/categoria.html"><span class="fa fa-sticky-note mr-3"></span> Lista de categorias</a>
+        </li>
+        <li>
+          <a href="../reserva/reserva.html"><span class="fa fa-sticky-note mr-3"></span> Lista de reservas</a>
+        </li>
       
       </ul>
 
