Se agrega control de mensajes de error

--- a/categoria/categoria.html
+++ b/categoria/categoria.html
@@ -58,7 +58,7 @@
       <h2 class="mb-4">Categorias</h2>
 
        <!-- boton para agregar nuevos registros -->
-
+       <div id="mensajes"></div>
        <div style="margin: 10px;">
         <button id="nuevoRegistro" onclick="activaNuevo();">Nuevo categoria</button>
       </div>
