--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -57,7 +57,7 @@
     <div id="content" class="p-4 p-md-5 pt-5">
       <h2 class="mb-4">Clientes</h2>
 
-      
+      <div id="mensajes"></div>
       <!-- boton para agregar nuevos registros -->
 
       <div style="margin: 10px;">
