--- a/mensajes/mensajes.html
+++ b/mensajes/mensajes.html
@@ -57,6 +57,8 @@
     <div id="content" class="p-4 p-md-5 pt-5">
       <h2 class="mb-4">Mensajes</h2>
 
+      <div id="mensajes"></div>
+
        <!-- boton para agregar nuevos registros -->
 
        <div style="margin: 10px;">
