Se hace actualizacion de vistas

--- a/categoria/categoria.html
+++ b/categoria/categoria.html
@@ -71,8 +71,8 @@
       <div id="nuevo">
         <h3>Registrar ...</h3>
         
-          <input type="text" id="name" placeholder="Nombre">
-          <input type="text" id="description" placeholder="Descripcion">
+          <input type="text" id="name" placeholder="Nombre"><br><br>
+          <input type="text" id="description" placeholder="Descripcion"><br><br>
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
