--- a/clientes/clientes.html
+++ b/clientes/clientes.html
@@ -70,10 +70,10 @@
       <div id="nuevo">
         <h3>Registrar ...</h3>
         <!-- <input type="number" id="id" placeholder="id"> -->
-        <input type="text" id="name" placeholder="Nombre">
-        <input type="email" id="email" placeholder="Correo">
-        <input type="password" id="password" placeholder="Contraseña">
-        <input type="number" id="age" placeholder="Edad">
+        <input type="text" id="name" placeholder="Nombre"><br><br>
+        <input type="email" id="email" placeholder="Correo"><br><br>
+        <input type="password" id="password" placeholder="Contraseña"><br><br>
+        <input type="number" id="age" placeholder="Edad"><br><br>
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
@@ -82,10 +82,10 @@
       <!-- Seccion para editar registros-->
       <div id="editar">
         <h3>Editar ...</h3>
-        <input type="number" id="idEdit" placeholder="id" >
-        <input type="text" id="nameEdit" placeholder="name" style="width: 300px;">
-        <input type="email" id="emailEdit" placeholder="email" style="width: 300px;">
-        <input type="number" id="ageEdit" placeholder="age" style="width: 100px;">
+        <input type="number" id="idEdit" placeholder="id" ><br><br>
+        <input type="text" id="nameEdit" placeholder="name" style="width: 300px;"><br><br>
+        <input type="email" id="emailEdit" placeholder="email" style="width: 300px;"><br><br>
+        <input type="number" id="ageEdit" placeholder="age" style="width: 100px;"><br><br>
         <button onclick="actualizar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
