--- a/disfraces/disfraces.html
+++ b/disfraces/disfraces.html
@@ -70,11 +70,12 @@
       <div id="nuevo">
         <h3>Registrar ...</h3>
         <!-- <input type="number" id="id" placeholder="Id"> -->
-        <input type="text" id="name" placeholder="Nombre">
-        <input type="text" id="brand" placeholder="Marca">
-        <input type="text" id="description" placeholder="Descripcion">
-        <input type="number" id="year" placeholder="Año">
-        <input type="number" id="category" placeholder="Categoria">
+        <input type="text" id="name" placeholder="Nombre"><br><br>
+        <input type="text" id="brand" placeholder="Marca"><br><br>
+        <input type="text" id="description" placeholder="Descripcion"><br><br>
+        <input type="number" id="year" placeholder="Año"><br><br>
+        
+        <select name="category" id="category"></select><br><br>
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
