--- a/reserva/reserva.html
+++ b/reserva/reserva.html
@@ -71,10 +71,10 @@
         <h3>Registrar ...</h3>
         
         
-          <input type="date" id="startDate" placeholder="Fecha alquiler">
-          <input type="date" id="devolutionDate" placeholder="Fecha devolucion">
-          <input type="number" id="client_id" placeholder="Id Cliente">
-          <input type="number" id="costume_id" placeholder="Id disfraz">
+          <input type="date" id="startDate" placeholder="Fecha alquiler"><br><br>
+          <input type="date" id="devolutionDate" placeholder="Fecha devolucion"><br><br>
+          <select name="client_id" id="client_id"></select><br><br>
+          <select name="costume_id" id="costume_id"></select><br><br>
         <button onclick="registrar();">Guardar</button>
         <button onclick="estadoInicial();">Cancelar</button>
       </div>
